--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_files_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_files_message.xml
@@ -25,8 +25,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/sceyt_bg_out_message"
-        android:maxWidth="@dimen/_190sdp"
-        android:minWidth="@dimen/_190sdp">
+        android:maxWidth="@dimen/bodyMaxWidth"
+        android:minWidth="@dimen/bodyMaxWidth">
 
         <ViewStub
             android:id="@+id/viewReplay"
