--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_file_item.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_file_item.xml
@@ -12,13 +12,14 @@
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:background="@drawable/sceyt_bg_circle"
-        android:padding="8dp"
+        android:padding="12dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sceyt_ic_file" />
 
-    <com.sceyt.sceytchatuikit.presentation.customviews.CircularProgressView
+    <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircularProgressView
         android:id="@+id/loadProgress"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -28,7 +29,6 @@
         app:layout_constraintEnd_toEndOf="@id/icFile"
         app:layout_constraintStart_toStartOf="@+id/icFile"
         app:layout_constraintTop_toTopOf="@+id/icFile"
-        app:progress="10"
         app:progressColor="@color/sceyt_color_white"
         app:trackColor="@android:color/transparent" />
 
