--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_link_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_link_message.xml
@@ -6,17 +6,17 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="10dp">
 
-    <com.sceyt.sceytchatuikit.presentation.customviews.SceytToReplayLineView
-        android:id="@+id/toReplayLine"
+    <com.sceyt.sceytchatuikit.presentation.customviews.SceytToReplyLineView
+        android:id="@+id/toReplyLine"
         android:layout_width="10dp"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/layoutDetails"
-        android:layout_alignBottom="@+id/tvReplayCount"
+        android:layout_alignBottom="@+id/tvReplyCount"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="9dp"
         android:visibility="gone"
-        app:sceytToReplayLineViewToLeft="true" />
+        app:sceytToReplyLineViewToLeft="true" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutDetails"
@@ -27,12 +27,12 @@
         android:background="@drawable/sceyt_bg_out_message">
 
         <ViewStub
-            android:id="@+id/viewReplay"
+            android:id="@+id/viewReply"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="8dp"
-            android:layout="@layout/sceyt_recycler_replay_container"
+            android:layout="@layout/sceyt_recycler_reply_container"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
-            app:layout_constraintTop_toBottomOf="@+id/viewReplay"
+            app:layout_constraintTop_toBottomOf="@+id/viewReply"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
             tools:text="Lore ipsum  is the correct text which" />
 
@@ -101,12 +101,12 @@
         android:visibility="gone" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvReplayCount"
+        android:id="@+id/tvReplyCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rvReactions"
         android:layout_marginEnd="2dp"
-        android:layout_toStartOf="@+id/toReplayLine"
+        android:layout_toStartOf="@+id/toReplyLine"
         android:includeFontPadding="false"
         android:paddingVertical="4dp"
         android:textColor="@color/sceyt_color_accent"
