--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -26,23 +26,22 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/sceyt_item_input_attachment" />
 
+    <include
+        android:id="@+id/layoutReplyOrEditMessage"
+        layout="@layout/sceyt_reply_edit_message_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvAttachments" />
+
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
         android:layout_height=".5dp"
         android:background="@color/sceyt_color_divider"
-        app:layout_constraintBottom_toTopOf="@+id/layoutReplayMessage" />
-
-    <include
-        android:id="@+id/layoutReplayMessage"
-        layout="@layout/sceyt_replay_message_container"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvAttachments" />
+        app:layout_constraintBottom_toTopOf="@+id/layoutInput" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutInput"
@@ -51,7 +50,7 @@
         android:layout_marginTop=".5dp"
         android:background="@color/sceyt_color_dialog_bg_themed"
         android:paddingVertical="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/layoutReplayMessage">
+        app:layout_constraintTop_toBottomOf="@+id/layoutReplyOrEditMessage">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/messageInput"
@@ -59,11 +58,11 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="14dp"
             android:background="@null"
+            android:gravity="center_vertical"
             android:hint="@string/sceyt_message"
             android:includeFontPadding="false"
             android:inputType="textMultiLine"
             android:maxLines="3"
-            android:gravity="center_vertical"
             android:minHeight="24dp"
             android:textColor="@color/sceyt_color_black_themed"
             android:textColorHint="@color/sceyt_color_hint"
@@ -77,8 +76,8 @@
             android:id="@+id/icAddAttachments"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:padding="2dp"
             android:layout_marginStart="14dp"
+            android:padding="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/sceyt_ic_upload_file" />
@@ -87,8 +86,8 @@
             android:id="@+id/icSendMessage"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:padding="2dp"
             android:layout_marginEnd="14dp"
+            android:padding="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/sceyt_ic_send_message" />
