--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -29,15 +29,17 @@
 
         <ViewStub
             android:id="@+id/viewReply"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="5dp"
             android:layout="@layout/sceyt_recycler_reply_container"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="@dimen/replayContainerMaxWidth" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageBody"
@@ -51,6 +53,7 @@
             android:textSize="@dimen/mediumTextSize"
             app:layout_constraintBottom_toBottomOf="@+id/layoutDetails"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReply"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
