--- a/SceytChatUiKit/src/main/res/layout/sceyt_reply_edit_message_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_reply_edit_message_container.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:layout_marginTop="13dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="30dp"
         android:singleLine="true"
         android:textColor="@color/sceyt_color_accent"
         android:textSize="13sp"
@@ -42,13 +42,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginBottom="13dp"
+        android:ellipsize="middle"
         android:singleLine="true"
         android:textColor="@color/sceyt_color_gray_800"
         android:textSize="@dimen/smallTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/icCancelReply"
+        app:layout_constraintEnd_toEndOf="@+id/tvName"
         app:layout_constraintStart_toStartOf="@id/guidBegin"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:text="Waiting for your answer." />
