--- a/SceytChatUiKit/src/main/res/values/sceyt_dimens.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="extraLargeTextSize">22sp</dimen>
     <dimen name="superLargeTextSize">24sp</dimen>
     <dimen name="bodyMaxWidth">270dp</dimen>
+    <dimen name="replayContainerMaxWidth">135dp</dimen>
 </resources>
