--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_text_message.xml
@@ -39,7 +39,7 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_max="@dimen/replayContainerMaxWidth" />
+            app:layout_constraintWidth_max="@dimen/bodyMaxWidth" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageBody"
