--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="sceyt_color_bg">#FFFFFF</color>
     <color name="sceyt_color_bg_out_message">#E3E7FF</color>
     <color name="sceyt_color_bg_inc_message">#F1F2F6</color>
-    <color name="sceyt_color_divider">#CDCDCF</color>
+    <color name="sceyt_color_divider">#F0F2F5</color>
     <color name="sceyt_color_text_themed">#060A26</color>
     <color name="sceyt_color_last_message_from">#060A26</color>
     <color name="sceyt_color_input">#F1F2F6</color>
