--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -7,7 +7,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height=".5dp"
+        android:layout_height="1dp"
         android:background="@color/sceyt_color_divider"
         app:layout_constraintBottom_toTopOf="@+id/rvAttachments"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,7 +39,7 @@
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
-        android:layout_height=".5dp"
+        android:layout_height="1dp"
         android:background="@color/sceyt_color_divider"
         app:layout_constraintBottom_toTopOf="@+id/layoutInput" />
 
@@ -47,7 +47,7 @@
         android:id="@+id/layoutInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop=".5dp"
+        android:layout_marginTop="1dp"
         android:background="@color/sceyt_color_dialog_bg_themed"
         android:paddingVertical="12dp"
         app:layout_constraintTop_toBottomOf="@+id/layoutReplyOrEditMessage">
