Creating logic is in  process.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_file_item.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_file_item.xml
@@ -22,6 +22,7 @@
         android:layout_height="0dp"
         android:padding="3dp"
         android:visibility="gone"
+        app:iconSizeInPercent="70"
         app:layout_constraintBottom_toBottomOf="@+id/icFile"
         app:layout_constraintEnd_toEndOf="@id/icFile"
         app:layout_constraintStart_toStartOf="@+id/icFile"
