--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_image_item.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_image_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -24,13 +23,13 @@
         android:layout_height="50dp"
         android:padding="3dp"
         app:backgroundColor="#33191C33"
-        app:indicatorColor="@color/sceyt_color_accent"
+        app:iconSizeInPercent="70"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:minProgress="2"
-        app:progressColor="@color/sceyt_color_accent"
+        app:progressColor="@color/sceyt_color_white"
         app:trackColor="@android:color/transparent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
