--- a/SceytChatUiKit/src/main/res/drawable/sceyt_bg_play_pause_button.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_bg_play_pause_button.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#66000000" />
+    <solid android:color="@color/sceyt_progress_bg_color" />
     <corners android:radius="40dp" />
 </shape>
