--- a/SceytChatUiKit/src/main/res/values/sceyt_dimens.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="superLargeTextSize">24sp</dimen>
     <dimen name="bodyMaxWidth">270dp</dimen>
     <dimen name="replayContainerMaxWidth">135dp</dimen>
+    <dimen name="messageProgressSize">50dp</dimen>
 </resources>
