--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -50,7 +50,8 @@
         android:layout_marginTop="1dp"
         android:background="@color/sceyt_color_dialog_bg_themed"
         android:paddingVertical="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/layoutReplyOrEditMessage">
+        app:layout_constraintTop_toBottomOf="@+id/layoutReplyOrEditMessage"
+        tools:layout_editor_absoluteX="16dp">
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/messageInput"
@@ -90,7 +91,7 @@
             android:padding="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/sceyt_ic_send_message" />
+            app:srcCompat="@drawable/sceyt_ic_voice" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
