--- a/SceytChatUiKit/src/main/res/layout/sceyt_reply_edit_message_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_reply_edit_message_container.xml
@@ -12,13 +12,40 @@
         android:background="@color/sceyt_color_divider"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutImage"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="10dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/tvMessageBody"
+        app:layout_constraintStart_toStartOf="@+id/guidBegin"
+        app:layout_constraintTop_toTopOf="@+id/icReplyOrEdit"
+        tools:visibility="visible">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imageAttachment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/SceytShapeAppearanceOverlay.CornerSize5"
+            tools:src="@tools:sample/backgrounds/scenic" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icReplyOrEdit"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvName"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintStart_toStartOf="@id/guidBegin"
+        app:layout_constraintStart_toEndOf="@id/layoutImage"
         app:layout_constraintTop_toTopOf="@id/tvName"
         app:srcCompat="@drawable/sceyt_ic_input_reply" />
 
@@ -28,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:layout_marginTop="13dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="20dp"
         android:singleLine="true"
         android:textColor="@color/sceyt_color_accent"
         android:textSize="13sp"
@@ -49,7 +76,7 @@
         android:textSize="@dimen/smallTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tvName"
-        app:layout_constraintStart_toStartOf="@id/guidBegin"
+        app:layout_constraintStart_toStartOf="@+id/icReplyOrEdit"
         app:layout_constraintTop_toBottomOf="@+id/tvName"
         tools:text="Waiting for your answer." />
 
