--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_deleted_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_deleted_message.xml
@@ -41,7 +41,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_max="@dimen/bodyMaxWidth"
-            tools:text="Henry Willian" />
+            tools:text="Henry Willian"
+            tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/messageBody"
