--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -62,7 +62,7 @@
             android:gravity="center_vertical"
             android:hint="@string/sceyt_message"
             android:includeFontPadding="false"
-            android:inputType="textMultiLine"
+            android:inputType="textMultiLine|textCapSentences"
             android:maxLines="3"
             android:minHeight="24dp"
             android:textColor="@color/sceyt_color_black_themed"
