--- a/SceytChatUiKit/src/main/res/layout/item_channel_file.xml
+++ b/SceytChatUiKit/src/main/res/layout/item_channel_file.xml
@@ -11,27 +11,10 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:background="@drawable/sceyt_bg_circle"
-        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sceyt_ic_file" />
-
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/loadProgress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layerType="hardware"
-        android:visibility="gone"
-        app:indicatorColor="@color/sceyt_color_white"
-        app:indicatorSize="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/icFile"
-        app:layout_constraintEnd_toEndOf="@id/icFile"
-        app:layout_constraintStart_toStartOf="@+id/icFile"
-        app:layout_constraintTop_toTopOf="@+id/icFile"
-        app:trackCornerRadius="5dp"
-        app:trackThickness="2.5dp" />
+        app:srcCompat="@drawable/sceyt_ic_file_with_bg" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvFileName"
