--- a/SceytChatUiKit/src/main/res/layout/item_channel_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/item_channel_video.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/sceyt_bg_corners_6"
     android:backgroundTint="@color/sceyt_color_gray">
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -19,7 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/SceytShapeAppearanceOverlay.CornerSize6"
         app:srcCompat="@color/sceyt_color_gray"/>
 
     <androidx.appcompat.widget.AppCompatTextView
