Added actions logic from ConversationInfoActivity.kt in direct channel case.

--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_muted.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_muted.xml
@@ -1,9 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="18dp"
+    android:height="12dp"
+    android:viewportWidth="18"
+    android:viewportHeight="12">
   <path
-      android:pathData="M5.715,3.295L19.701,17.285C20.092,17.676 20.092,18.309 19.701,18.699C19.341,19.06 18.774,19.088 18.382,18.783L18.287,18.699L15,15.411V20C15,20.513 14.614,20.935 14.117,20.993L14,21C13.358,21 12.742,20.751 12.281,20.305L6.79,15H4C2.895,15 2,14.105 2,13V11C2,9.895 2.895,9 4,9H6.765L7.695,8.104L4.301,4.71C3.91,4.319 3.91,3.686 4.301,3.295C4.691,2.905 5.324,2.905 5.715,3.295ZM14,3C14.552,3 15,3.448 15,4V9.76L10.574,5.334L12.279,3.693C12.696,3.293 13.237,3.052 13.808,3.007L14,3Z"
-      android:fillColor="#0DBD8B"/>
+      android:pathData="M8.263,0.878L4.577,3.827H1.628V8.251H4.577L8.263,11.2V0.878Z"
+      android:fillColor="#9B9DA8"/>
+  <path
+      android:pathData="M8.551,0.28C8.781,0.391 8.927,0.623 8.927,0.878V11.2C8.927,11.455 8.781,11.687 8.551,11.797C8.321,11.908 8.048,11.877 7.849,11.718L4.344,8.914H1.628C1.262,8.914 0.965,8.617 0.965,8.251V3.827C0.965,3.461 1.262,3.164 1.628,3.164H4.344L7.849,0.36C8.048,0.201 8.321,0.17 8.551,0.28ZM7.6,2.259L4.992,4.345C4.874,4.439 4.728,4.491 4.577,4.491H2.292V7.587H4.577C4.728,7.587 4.874,7.638 4.992,7.732L7.6,9.819V2.259Z"
+      android:fillColor="#9B9DA8"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M16.842,3.358C17.101,3.617 17.101,4.037 16.842,4.296L12.419,8.72C12.16,8.979 11.739,8.979 11.48,8.72C11.221,8.461 11.221,8.041 11.48,7.781L15.904,3.358C16.163,3.099 16.583,3.099 16.842,3.358Z"
+      android:fillColor="#9B9DA8"
+      android:fillType="evenOdd"/>
+  <path
+      android:pathData="M11.48,3.358C11.739,3.099 12.16,3.099 12.419,3.358L16.842,7.781C17.101,8.041 17.101,8.461 16.842,8.72C16.583,8.979 16.163,8.979 15.904,8.72L11.48,4.296C11.221,4.037 11.221,3.617 11.48,3.358Z"
+      android:fillColor="#9B9DA8"
+      android:fillType="evenOdd"/>
 </vector>
