--- a/SceytChatUiKit/src/main/res/values/sceyt_styles.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_styles.xml
@@ -60,10 +60,23 @@
         <item name="android:windowBackground">@drawable/sceyt_bg_dialog</item>
     </style>
 
+    <style name="SceytDialogNoTitle95" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowMinWidthMajor">95%</item>
+        <item name="android:windowMinWidthMinor">95%</item>
+        <item name="android:windowBackground">@drawable/sceyt_bg_dialog</item>
+    </style>
+
     <style name="SceytDialogWindowAnimation">
         <item name="android:windowEnterAnimation">@anim/sceyt_anim_dialog_enter</item>
         <item name="android:windowExitAnimation">@anim/sceyt_anim_dialog_exit</item>
     </style>
+
+    <style name="SceytDialogFromBottomAnimation">
+        <item name="android:windowEnterAnimation">@anim/sceyt_anim_slide_from_bottom</item>
+        <item name="android:windowExitAnimation">@anim/sceyt_anim_slide_to_bottom</item>
+    </style>
+
 
     <style name="SceytBottomNavigationTextStyle" parent="@style/TextAppearance.AppCompat.Caption">
         <item name="android:textSize">10sp</item>
