--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_video_item.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_video_item.xml
@@ -37,7 +37,7 @@
         android:layout_margin="8dp"
         android:background="@drawable/sceyt_bg_corners_20"
         android:backgroundTint="@color/sceyt_progress_bg_color"
-        android:drawableStart="@drawable/ic_video"
+        android:drawableStart="@drawable/sceyt_ic_video"
         android:drawablePadding="5dp"
         android:includeFontPadding="false"
         android:paddingHorizontal="7dp"
